removing unused java endoresed and java home requirements