@@ -27,10 +27,9 @@ do
   REG_MIGRATE_CLASSPATH=$REG_MIGRATE_CLASSPATH:$f
 done
 
-$JAVA_HOME/bin/java -server -Xms128M -Xmx128M \
+java -server -Xms128M -Xmx128M \
    $XDEBUG \
    $TEMP_PROPS \
-   -Djava.endorsed.dirs=$AIRAVATA_HOME/lib/endorsed \
    -classpath $REG_MIGRATE_CLASSPATH \
    -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=5000,suspend=n \
    org.apache.airavata.registry.tool.DBMigrator $*
